# Blinn

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  app.cpp  main.cpp
include/BlinnSolver/: solver.hpp
src/: CMakeLists.txt  solver.cpp
theory/: Wiki.html  Wiki.ipynb  negativeres_omarh.html  negativeres_omarh.ipynb  test (1).ipynb  test.ipynb
